# RetoLiverpool

./: .gitignore  README.md
Backend1/: BACKEND.code-workspace  Predict.py  decision_tree_model.joblib  main.py  pyproject.toml
Backend1/agente_litigios/: agent.py  chat_api.py
Backend1/agente_litigios/agente_litigios/: ingest_folder.py  main.py
Backend1/agente_litigios/agente_litigios/.adk/: session.db
Frontend/: app.py  convert.py  main.py  pyproject.toml
Frontend/images/: LIVERBOT.avif
Frontend/pages/: Dashboard.py  chatbot.py  index.py  modelo.py  semaforo.py
Machine Learning/: (Historico)_EQUIPO_5_PythonML_Liverpool (1).ipynb
